# xdrlib-next

./: README.md  pyproject.toml
tests/: test_xdrlib.py
xdrlib_next/: __init__.py
