[tool.poetry]
name = "xdrlib-next"
version = "0.1.0"
description = ""
authors = ["overcat <4catcode@gmail.com>"]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
